# onecli

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/gateway/: Cargo.toml
apps/gateway/src/: approval.rs  apps.rs  condition_match.rs  connect.rs  db.rs  gateway.rs  inject.rs  main.rs  policy.rs  secret_inject.rs  telemetry.rs  telemetry_core.rs
apps/gateway/src/cloud/: approval.rs  auth.rs  aws_sts.rs  cache.rs  cloud_apps.rs  condition_match.rs  crypto.rs  hooks.rs  response.rs  telemetry.rs  trial.rs
apps/gateway/src/gateway/: forward.rs  hooks.rs  mitm.rs  websocket.rs
apps/web/: next.config.js  package.json
apps/web/src/app/: layout.tsx
apps/web/src/app/(connect)/app-connect/[provider]/: page.tsx
apps/web/src/app/(connect)/app-connect/_components/: connect-flow.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/_components/: nav-main.tsx
apps/web/src/app/(dashboard)/activity/_components/: activity-content.tsx  activity-table.tsx  decision-badge.tsx  status-badge.tsx
apps/web/src/app/(dashboard)/agents/_components/: agent-card.tsx  agents-content.tsx  create-agent-dialog.tsx  manage-access-dialog.tsx
apps/web/src/app/(dashboard)/connections/_components/: app-config-form.tsx  app-detail.tsx  app-permission-group.tsx  app-permission-row.tsx  app-permissions.tsx  apps-tab.tsx  connected-tab.tsx  connection-account-card.tsx  connection-card.tsx  connections-tabs.tsx  resolve-tool-permission.ts  secret-card.tsx  secret-dialog.tsx  secrets-content.tsx  types.ts
apps/web/src/app/(dashboard)/connections/apps/[provider]/: page.tsx
apps/web/src/app/(dashboard)/overview/_components/: overview-content.tsx  recent-activity-card.tsx  stats-cards.tsx
apps/web/src/app/(dashboard)/rules/_components/: app-permission-summary.tsx  app-picker-grid.tsx  application-rule-form.tsx  custom-endpoint-form.tsx  rule-card.tsx  rule-dialog.tsx  rules-content.tsx  types.ts
apps/web/src/app/(dashboard)/settings/general/: page.tsx
apps/web/src/app/(dashboard)/settings/general/_components/: public-url-form.tsx
apps/web/src/app/api/apps/[provider]/authorize/: route.ts
apps/web/src/app/api/apps/[provider]/callback/: route.ts
apps/web/src/hooks/: use-agents.ts  use-app-connected.ts  use-connections.ts  use-counts.ts  use-rules.ts  use-secrets.ts
apps/web/src/lib/: api-fetch.ts  nav-config.ts
apps/web/src/lib/actions/: api-key.ts  app-config.ts  connections.ts  project.ts  rules.ts  secrets.ts
apps/web/src/lib/api/: agents.ts  client.ts  connections.ts  counts.ts  index.ts  keys.ts  rules.ts  secrets.ts  session-provider.ts  types.ts
apps/web/src/lib/apps/: google-oauth.ts  oauth-org.ts
apps/web/src/lib/auth/: login-content.tsx
apps/web/src/lib/components/: condition-builder.tsx
apps/web/src/lib/services/: agent-service.ts  connection-service.ts  policy-rule-service.ts  secret-service.ts
apps/web/src/providers/: query-provider.tsx
