[package]
name = "onecli-gateway"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "onecli-gateway"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body = "1"
http-body-util = "0.1"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# WebSocket upstream TLS root certificates
webpki-roots = "0.26"

# Certificate generation
rcgen = "0.13"

# Cryptography (AES-256-GCM for secret decryption)
ring = "0.17"

# HTTP client (for upstream forwarding in MITM mode)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JWT validation
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrent cache
dashmap = "6"

# Base64 (for gateway auth)
base64 = "0.22"

# UUID (for approval IDs)
uuid = { version = "1", features = ["v4"] }

# Stream combinators
futures-util = "0.3"

# LRU cache (429 rotation offset)
lru = "0.12"

# Error handling
anyhow = "1"

# Time (for certificate validity + RFC 3339 parsing)
time = { version = "0.3", features = ["parsing"] }

# Direct database access
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }

# Agent Access (Bitwarden vault credential injection)
ap-client = "0.9.0"
ap-proxy-client = "0.9.0"
ap-proxy-protocol = "0.9.0"
ap-noise = "0.9.0"
async-trait = "0.1"
hex = "0.4"

[features]
cloud = ["dep:aws-sdk-kms", "dep:aws-config", "dep:redis", "dep:aws-sdk-sts"]

[dependencies.aws-sdk-kms]
version = "1"
optional = true

[dependencies.aws-config]
version = "1"
features = ["behavior-version-latest"]
optional = true

[dependencies.redis]
version = "1"
features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"]
optional = true

[dependencies.aws-sdk-sts]
version = "1"
optional = true

[dependencies.aws-sigv4]
version = "1"

[dependencies.aws-credential-types]
version = "1"

[dependencies.percent-encoding]
version = "2"

[dependencies.form_urlencoded]
version = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
